--- a/src/components/TheNavigation/TheNavigation.module.scss
+++ b/src/components/TheNavigation/TheNavigation.module.scss
@@ -9,27 +9,40 @@
   }
 
   &__nav {
-    @include flex(start, center);
+    @include flex(end, center);
+    width: 850px;
+
 
     &_btn {
-      margin-right: 119px;
+      margin-left: 30px;
     }
 
     &_lang {
       @include text(rem(14px), 400, $GRAY);
       line-height: 106%;
       text-transform: uppercase;
+      margin-left: 20px;
     }
 
     &_phone {
       @include text(rem(16px), 600, $WHITE);
       line-height: 125%;
-      margin-left: 53px;
+      margin-left: 30px;
+      @include transition(color);
+      &:hover {
+        color: $YELLOW;
+      }
     }
-  }
 
-  .container {
-    @include flex(space-between, center);
+    &_burger {
+      @include svg(20px, $WHITE);
+      margin-left: 30px;
+      cursor: pointer;
+    }
+
+    .active {
+      fill: $YELLOW;
+    }
   }
 
   .text {
@@ -44,16 +57,62 @@
   }
 
   // MENU component
-
   .menu {
+    position: relative;
     @include flex(space-between, center);
     width: 100%;
     max-width: 330px;
+    display: none;
+    @include media($SCREEN_DESKTOP) {
+      display: flex;
+    }
+
+    &__item:hover .supmenu {
+      visibility: visible;
+      opacity: 1;
+    }
 
     &__link {
+      display: block;
       @include text(rem(14px), 600, $WHITE);
       line-height: 121%;
       text-transform: uppercase;
+      padding: 22px 0;
+      @include transition(color);
+
+      &:hover {
+        color: $YELLOW;
+      }
     }
+  }
+
+  // SUP_MENU
+  .supmenu {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    bottom: -100px;
+    width: 100%;
+    max-width: 247px;
+    background-color: $DARK;
+    border: 1px solid #979797;
+    @include transition(opacity, visibility);
+
+    &__link {
+      display: flex;
+      @include text(rem(14px), 600, $WHITE);
+      padding: 9px 0 9px 20px;
+      @include transition(color, background-color);
+
+      &:hover {
+        background-color: $YELLOW;
+        color: $DARK;
+      }
+    }
+  }
+
+  .container {
+    @include flex(space-between, center);
   }
 }
